--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background: url('https://img.freepik.com/free-photo/view-3d-woman-with-lightbulbs_23-2150710054.jpg?t=st=1707930753~exp=1707934353~hmac=76959581b86f2e51a11c94322faa8972484e309dd3cd072050b4d7d4400eed83&w=740');
+    background: url('img2.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
